Updates to description of problem 1

--- a/p8105_hw1_yh3554.md
+++ b/p8105_hw1_yh3554.md
@@ -22,8 +22,7 @@ from islands of Plamer Archipelago of Antarctica. The variables are
 species, island, body measurement (bill length in in millimeters , bill
 depth in millimeters, flipper length in millimeters, body mass in gram),
 sex, and year. The data has 344 rows and 8 variables. The mean of
-flipper length is
-`rround(mean(penguins$flipper_length_mm,na.rm=TRUE), 2)` millimeters.
+flipper length is 200.92 millimeters.
 
 #### Scatterplot
 
